--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,11 @@ html{
     font-family: 'Poppins', sans-serif;
 }
 
+
+body::-webkit-scrollbar {
+	width: 7px;
+}
+
+body::-webkit-scrollbar-thumb {
+	background: #414141;
+}
