--- a/src/index.css
+++ b/src/index.css
@@ -3,17 +3,23 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-html{
-    scroll-behavior:smooth;
-    font-family: 'Poppins', sans-serif;
+.bg-blur {
+  background: rgba(107, 70, 193, 0.8); /* Color de fondo */
+  backdrop-filter: blur(10px); /* Efecto de difuminado */
+}
+html {
+  scroll-behavior: smooth;
+  font-family: 'Poppins', sans-serif;
 }
 
-
 body::-webkit-scrollbar {
-	width: 7px;
+  width: 7px;
 }
 
 body::-webkit-scrollbar-thumb {
-	background: #414141;
+  background: #414141;
+}
+
+.heroImg {
+  width: 26rem;
 }
