--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,18 @@ body::-webkit-scrollbar-thumb {
 }
 
 .heroImg {
-  width: 26rem;
+  width: 28rem;
+}
+@media (max-width: 768px) {
+  .heroImg {
+    width: 24rem;
+  }
+}
+
+@media (max-width: 900px) {
+  .heroImg {
+    width: 18rem;
+  }
 }
 
 .scroll-bottom {
