--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
 html {
   scroll-behavior: smooth;
   font-family: 'Poppins', sans-serif;
+  background-color: white;
 }
 
 body::-webkit-scrollbar {
